manifests/apps/media/echo-server/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-server
  namespace: echo-server
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: echo-server
