manifests/apps/media/echo-server/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-server-route
  namespace: echo-server
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: placeholder
      namespace: placeholder
      sectionName: https
  hostnames:
    - placeholder.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: echo-server
          port: 8080
          weight: 1
